--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -1,66 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TODO LIST - Home</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
     <style>
-        .form-control{
-        padding: 1.375rem .75rem !important;
-    }
+      body {
+        background-color: #f8f9fa;
+      }
+
+      .form-control {
+        padding: 1.375rem 0.75rem !important;
+      }
+
+      .task-scroll {
+        max-height: 420px;
+        overflow-y: auto;
+        padding-right: 5px;
+      }
+
+      .task-scroll::-webkit-scrollbar {
+        width: 6px;
+      }
+
+      .task-scroll::-webkit-scrollbar-thumb {
+        background-color: #0d6efd;
+        border-radius: 10px;
+      }
+
+      .task-scroll::-webkit-scrollbar-track {
+        background: #e9ecef;
+      }
     </style>
-</head>
-<body>
+  </head>
+
+  <body>
     <div class="container">
-        <h3 class="pt-5 text-center">Django ToDo App</h3>
-        <div class="row">
-            <h4>My Day</h4>
-            <p class="text-muted">{% now "jS F Y" %}</p>
-            <div class="col-md-7 col-lg-7" style="height: 450px; overflow: scroll;">
-                <!-- List of all the tasks for the day -->
-                <div class="card m-1">
-                    <div class="card-body">
-                        This is some Task
-                        <span style="position: relative; float: right;">
-                            <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
-                            <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
-                            <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
-                        </span>
-                    </div>
-                </div>
-               
-            </div>
-            <div class="col-md-5 col-lg-5">
-                <h5>Completed Tasks</h5>
-                <!-- List of all the tasks that have completed -->
-                <div class="card m-1">
-                    <div class="card-body">
-                        This is the completed task.
-                    </div>
-                </div>
-            </div>
+      <h3 class="pt-5 text-center fw-bold">Django ToDo App</h3>
+
+      <div class="row mt-4">
+        <div class="col-12">
+          <h4>My Day</h4>
+          <p class="text-muted">{% now "jS F Y" %}</p>
         </div>
-        <div class="row">
-            <div class="col-md-6 col-lg-6 p-0" style="position: absolute; bottom: 50px;">
-                <!-- To Do Form -->
-                <form action="" >
-                    <div class="form-group">
-                        <span style="display: flex;">
-                            <input type="text" class="form-control" placeholder="Add a task">
-                            <button class="btn btn-primary" style="width: 200px;"><i class="fa fa-plus"></i> Add</button>
-                        </span>
-                    </div>
-                </form>
+
+        <!-- Uncompleted Tasks -->
+        <div class="col-md-7 col-lg-7">
+          <div class="task-scroll">
+            <div class="card">
+              {% for task in tasks_uncompleted %}
+              <div
+                class="card-body d-flex justify-content-between align-items-center border-bottom"
+              >
+                <span>{{ task.task }}</span>
+
+                <span>
+                  <a
+                    href="{% url 'mark_as_done' task.pk %}"
+                    class="btn btn-success btn-sm"
+                  >
+                    <i class="fa fa-check"></i> Done
+                  </a>
+                  <a
+                    href="{% url 'delete_task' task.pk %}"
+                    class="btn btn-danger btn-sm"
+                  >
+                    <i class="fa fa-trash"></i>
+                  </a>
+                  <a
+                    href="{% url 'edit_task' task.pk %}"
+                    class="btn btn-primary btn-sm"
+                  >
+                    <i class="fa fa-pencil"></i>
+                  </a>
+                </span>
+              </div>
+              {% endfor %}
             </div>
+          </div>
         </div>
+
+        <!-- Completed Tasks -->
+        <div class="col-md-5 col-lg-5">
+          <h5 class="fw-semibold">Completed Tasks</h5>
+
+          <div class="task-scroll mt-2">
+            {% for task in tasks_completed %}
+            <div class="card mb-2">
+              <div class="card-body text-decoration-line-through text-muted">
+                {{ task.task }}
+              </div>
+              <span>
+                <a
+                  href="{% url 'mark_as_undone' task.pk %}"
+                  class="btn btn-success btn-sm"
+                >
+                  <i class="fa fa-check"></i> Un-Done
+                </a>
+              </span>
+            </div>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
+
+      <!-- Add Task Form -->
+      <div class="row">
+        <div class="col-md-7 col-lg-7 mt-4">
+          <form action="{% url 'addTask' %}" method="post">
+            {% csrf_token %}
+            <div class="d-flex gap-2">
+              <input
+                type="text"
+                name="task"
+                class="form-control"
+                placeholder="Add a task"
+                required
+              />
+              <button type="submit" class="btn btn-primary px-4">
+                <i class="fa fa-plus"></i> Add
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
